Correcting contrast issues for elements on hover

--- a/style.css
+++ b/style.css
@@ -797,16 +797,16 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #f2ab8a;
+    background-color: #f2aa7d;
 }
 
 .tc-white {
-/*    color: #f2ab8a!important;*/
+/*    color: #f2aa7d!important;*/
 color:#FFE069!important;
 }
 
 .btn-atomic-tangerine {
-    background: #f2ab8a;
+    background: #f2aa7d;
     color: #364577!important;
 }
 
@@ -823,7 +823,7 @@ color:#FFE069!important;
 }
 
 .ltc-atomic-tangerine {
-    color: #f2ab8a!important;
+    color: #f2aa7d!important;
 }
 
 .ltc-atomic-tangerine:hover {
